--- a/themes/jacob/assets/sass/_list.scss
+++ b/themes/jacob/assets/sass/_list.scss
@@ -9,6 +9,11 @@
   gap: 0.5em;
   line-height: 2;
   font-weight: 500;
+
+  @media screen and (max-width: 900px) {
+    line-height: 1.5;
+    font-size: 0.8em;
+  }
 }
 
 .post-list-item {
@@ -18,13 +23,25 @@
   display: flex;
   background-size: cover;
   background-position: center center;
+  @media screen and (max-width: 900px) {
+    border-radius: 0;
+  }
   .featured-image {
     height: 350px;
     min-width: 100px;
-    img {
-      border-radius: 2em;
-      object-fit: cover;
-      max-width: 800px;
+
+    @media screen and (min-width: 900px) {
+      img {
+        border-radius: 2em;
+        object-fit: cover;
+        max-width: 800px;
+      }
+    }
+  }
+
+  @media screen and (max-width: 900px) {
+    .featured-image {
+      display: none;
     }
   }
 
@@ -34,14 +51,22 @@
   }
 
   .info-featured {
-    height: 300px;
-    border-radius: 0 0 0 2em;
-    background: linear-gradient(
-      to right,
-      rgba(51, 51, 51, 0.568) 0%,
-      rgba(51, 51, 51, 0.694) 1%,
-      rgba(51, 51, 51, 0.9) 4%
-    );
+    @media screen and (min-width: 900px) {
+      height: 300px;
+      background: linear-gradient(
+        to right,
+        rgba(51, 51, 51, 0.568) 0%,
+        rgba(51, 51, 51, 0.694) 1%,
+        rgba(51, 51, 51, 0.9) 4%
+      );
+      border-radius: 0 0 0 2em;
+    }
+    @media screen and (max-width: 900px) {
+      background: linear-gradient(
+        rgba(51, 51, 51, 0) 0%,
+        rgba(51, 51, 51, 0.9) 27%
+      );
+    }
   }
 }
 
